--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
       href="https://bootswatch.com/3/paper/bootstrap.min.css"
     />
   </head>
+
   <body>
     <nav class="navbar-navbar-inverse">
       <div class="container">
@@ -30,7 +31,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 jumbotron text-center">
-          <h1>Hi i am Ganesh</h1>
+          <h1>About me</h1>
         </div>
       </div>
     </div>
