--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <nav class="navbar-navbar-inverse">
       <div class="container">
         <div class="navbar-header">
-          <a href="/index.html" class="navbar-brand">Ganesh Resume</a>
+          <a href="/" class="navbar-brand">Ganesh Resume</a>
         </div>
         <div class="navbar-collapse collapse" id="myMenu">
           <ul class="nav navbar-nav">
             <li>
-              <a href="/about.html">About Me</a>
+              <a href="/about">About Me</a>
             </li>
             <li>
-              <a href="/contact.html">Contact me</a>
+              <a href="/contact">Contact me</a>
             </li>
           </ul>
         </div>
